<resources>
    <string name="app_name">Campus Recruitment System</string>
    <string name="student_name">Studet Name</string>
    <string name="program_title">Program Title</string>
    <string name="student_picker">Student</string>
    <string name="company_picker">Company</string>
    <string name="profile_picker">Choose Account Type</string>
    <string name="profile_edittext_cgpa">Enter CGPA</string>
    <string name="profile_edittext_program">Enter Academic Program</string>
    <string name="profile_edittext_num">Enter Contact Number</string>
    <string name="profile_edittext_majors">Enter Majors</string>
    <string name="button_submit">Submit</string>
    <string name="profile_edittext_name">Enter Diplay Name</string>
    <string name="profile_edittext_company_name">Enter Organization Name</string>
    <string name="profile_edittext_company_address">Enter Organization Address</string>
    <string name="profile_edittext_company_contact">Enter Organization Contact</string>
    <string name="profile_edittext_company_type">Enter Organization Type</string>
    <string name="profile_edittext_job_title">Enter Job Title</string>
    <string name="profile_edittext_job_detail">Enter Job Detail</string>
    <string name="profile_edittext_postions">Enter Position Available</string>
    <string name="profile_edittext_area">Enter Area For Job Placement</string>
    <string name="profile_edittext_age_limit">Age Limit</string>
    <string name="student_list_picker">Student List</string>
    <string name="vacancies_posted_list">Vacancies Posted</string>
    <string name="option_title">Choose Option</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_picker_title">Choose User Type</string>
    <string name="or">OR</string>
    <string name="delete">Delete</string>
    <string name="organization_name">Organization Name</string>
    <string name="add_organization">Add</string>
    <string name="button_apply">Apply</string>
    <string name="button_applicants">Applicants</string>
    <string name="bio_data">Bio Data</string>
    <string name="program_enrolled">Program Enrolled</string>
    <string name="majors">Majors</string>
    <string name="cgpa">CGPA</string>
    <string name="email">Email</string>
    <string name="job_title">Job Title</string>
    <string name="job_detail">Job Detail</string>
    <string name="job_area">Area</string>
    <string name="job_agelimit">Age Limit</string>
    <string name="job_position">Position</string>
    <string name="organization_title">Organization Name</string>
    <string name="organization_conatact">Organization Contact</string>
    <string name="organization_email">Organization Email</string>
    <string name="organization_address">Organization Address</string>
    <string name="organization_type">Organization Category</string>
    <string name="vacancy_title">Vacancy Details</string>
    <string name="organization_title_tag">Organization Details</string>
    <string name="student_biodata">Student Bio-Data</string>


</resources>
