<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView

        android:id="@+id/student_biodata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/organization_title_tag"
        android:textAlignment="center"
        android:textColor="@color/tw__composer_black"
        android:textSize="20sp" />

    <TextView

        android:id="@+id/organization_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/organization_title"
        android:textColor="@color/tw__composer_black"
        android:textSize="12sp" />

    <TextView

        android:id="@+id/organization_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textAlignment="viewStart"
        android:textSize="18sp"


        />

    <TextView

        android:id="@+id/organization_address_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/organization_address"
        android:textColor="@color/tw__composer_black"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/orgaization_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="detail"
        android:textAlignment="viewStart"
        android:textSize="18sp" />

    <TextView

        android:id="@+id/organization_contact_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/organization_conatact"
        android:textColor="@color/tw__composer_black"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/organization_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="position"
        android:textAlignment="viewStart"
        android:textSize="18sp" />

    <TextView

        android:id="@+id/organization_email_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/organization_email"
        android:textColor="@color/tw__composer_black"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/organization_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="certificate"
        android:textAlignment="viewStart"
        android:textSize="18sp" />


    <TextView

        android:id="@+id/organization_type_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/organization_type"
        android:textColor="@color/tw__composer_black"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/organization_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="cgpa"
        android:textSize="18sp" />


</LinearLayout>
