<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView

        android:id="@+id/student_biodata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_biodata"
        android:textAlignment="center"
        android:textColor="@color/tw__composer_black"
        android:textSize="20sp" />


    <TextView

         android:id="@+id/student_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
        android:textSize="15sp" />



    <TextView
        android:id="@+id/student_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="contact"
        android:textAlignment="center"
        android:textSize="15sp" />

    <TextView

        android:id="@+id/student_program_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/bio_data"
        android:textColor="@color/tw__composer_black"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/program_enrolled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="program enrolled"
        android:textAlignment="viewStart"
        android:textSize="18sp" />

    <TextView

        android:id="@+id/student_majors_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/majors"
        android:textColor="@color/tw__composer_black"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/majors"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="certificate"
        android:textAlignment="viewStart"
        android:textSize="18sp" />

    <TextView

        android:id="@+id/student_cgpa_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/cgpa"
        android:textColor="@color/tw__composer_black"
        android:textSize="12sp" />


    <TextView
        android:id="@+id/cgpa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="cgpa"
        android:textSize="18sp" />

    <TextView

        android:id="@+id/student_email_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/email"
        android:textColor="@color/tw__composer_black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="email"
        android:textAlignment="viewStart"
        android:textSize="18sp" />


</LinearLayout>